# gtest-hoge

./: .gitignore  .travis.yml  CMakeLists.txt  CodeCoverage.cmake  README.md  a.cpp
cmake/: CodeCoverage.cmake
src/: SegmentTreeBeats.cpp  is-prime.cpp  primes.cpp  rangesum.cpp
test/: CMakeLists.txt  SegmentTreeBeats.cpp  is-prime.cpp  primes.cpp  rangesum.cpp
